k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-ingress
  namespace: hackathon
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /teams
            pathType: Prefix
            backend:
              service:
                name: team-service
                port:
                  number: 80
          - path: /submissions
            pathType: Prefix
            backend:
              service:
                name: submission-service
                port:
                  number: 80
          - path: /judging
            pathType: Prefix
            backend:
              service:
                name: judging-service
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
